[gd_scene load_steps=2 format=3 uid="uid://c0yviw3gumrmc"]

[ext_resource type="Script" uid="uid://dyfw6521f1uqa" path="res://scripts/login.gd" id="1_pymad"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pymad")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 237.0
offset_bottom = 190.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Iniciar Sesión"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Correo electrónico"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Contraseña"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ingresar"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="GoogleLoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Iniciar sesión con Google"

[node name="ToRegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "¿No tienes cuenta? Regístrate"

[node name="ToAdminRegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Registrarse como Administrador"
